--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@property --gradient-angle {
+  syntax: '<angle>';
+  initial-value: 0deg;
+  inherits: false;
+}
+
+body {
+  background: #073438;
+  color: #fff;
+}
+
+form :focus-visible {
+  outline: none;
+  @apply ring-2 ring-teal-400 ring-offset-2 ring-offset-gray-100;
+}
+
+.houdini-gradient::before,
+.houdini-gradient::after {
+  background-image: conic-gradient(
+    from var(--gradient-angle, 0deg),
+    #052b2f,
+    #073438,
+    #0e4b50,
+    #2d8f85,
+    blueviolet,
+    #2d8f85,
+    #0e4b50,
+    #073438,
+    #052b2f
+  );
+  animation: rotation 20s linear infinite;
+}
+
+@keyframes rotation {
+  from {
+    --gradient-angle: 0deg;
+  }
+  to {
+    --gradient-angle: 360deg;
+  }
+}
